# acts

./: CMakeLists.txt
Examples/Algorithms/Alignment/: CMakeLists.txt
Examples/Algorithms/AmbiguityResolution/: CMakeLists.txt
Examples/Algorithms/Digitization/: CMakeLists.txt
Examples/Algorithms/Fatras/: CMakeLists.txt
Examples/Algorithms/Geant4/: CMakeLists.txt
Examples/Algorithms/Geant4HepMC/: CMakeLists.txt
Examples/Algorithms/Generators/: CMakeLists.txt
Examples/Algorithms/GeneratorsPythia8/: CMakeLists.txt
Examples/Algorithms/Geometry/: CMakeLists.txt
Examples/Algorithms/HepMC/: CMakeLists.txt
Examples/Algorithms/MaterialMapping/: CMakeLists.txt
Examples/Algorithms/Printers/: CMakeLists.txt
Examples/Algorithms/Propagation/: CMakeLists.txt
Examples/Algorithms/TrackFinding/: CMakeLists.txt
Examples/Algorithms/TrackFindingExaTrkX/: CMakeLists.txt
Examples/Algorithms/TrackFindingML/: CMakeLists.txt
Examples/Algorithms/TrackFitting/: CMakeLists.txt
Examples/Algorithms/TruthTracking/: CMakeLists.txt
Examples/Algorithms/Utilities/: CMakeLists.txt
Examples/Algorithms/Vertexing/: CMakeLists.txt
Examples/Detectors/ContextualDetector/: CMakeLists.txt
Examples/Detectors/DD4hepDetector/: CMakeLists.txt
Examples/Detectors/Geant4Detector/: CMakeLists.txt
Examples/Detectors/GenericDetector/: CMakeLists.txt
Examples/Detectors/MagneticField/: CMakeLists.txt
Examples/Detectors/MuonSpectrometerMockupDetector/: CMakeLists.txt
Examples/Detectors/TelescopeDetector/: CMakeLists.txt
Examples/Io/Csv/: CMakeLists.txt
(+18 files in other folders)
